javafx: patch command line to ensure that javafx modules come to the module path, use --add-reads (IDEA-200092)